--- a/packages/graphql-server-express/package.json
+++ b/packages/graphql-server-express/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql-server-express",
+  "name": "graphql-server-express-propagate-errors",
   "version": "0.5.1",
   "description": "Production-ready Node.js GraphQL server for Express and Connect",
   "main": "dist/index.js",
@@ -26,7 +26,7 @@
   },
   "homepage": "https://github.com/apollostack/graphql-server#readme",
   "dependencies": {
-    "graphql-server-core": "^0.6.0",
+    "graphql-server-core-propagate-errors": "^0.6.0",
     "graphql-server-module-graphiql": "^0.6.0"
   },
   "devDependencies": {
