--- a/packages/graphql-server-core/package.json
+++ b/packages/graphql-server-core/package.json
@@ -1,11 +1,6 @@
 {
-<<<<<<< HEAD
   "name": "graphql-server-core-propagate-errors",
   "version": "0.6.1",
-=======
-  "name": "graphql-server-core",
-  "version": "1.1.0",
->>>>>>> upstream/master
   "description": "Core engine for Apollo GraphQL server",
   "main": "dist/index.js",
   "scripts": {
@@ -14,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/apollographql/apollo-server/tree/master/packages/graphql-server-core"
+    "url": "https://github.com/apollostack/graphql-server/tree/master/packages/graphql-server-core"
   },
   "keywords": [
     "GraphQL",
@@ -25,11 +20,20 @@
   "author": "Jonas Helfer <jonas@helfer.email>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/apollographql/apollo-server/issues"
+    "url": "https://github.com/apollostack/graphql-server/issues"
   },
-  "homepage": "https://github.com/apollographql/apollo-server#readme",
-  "dependencies": {
-    "apollo-server-core": "^1.1.0"
+  "homepage": "https://github.com/apollostack/graphql-server#readme",
+  "devDependencies": {
+    "@types/fibers": "0.0.29",
+    "@types/graphql": "^0.8.5",
+    "fibers": "^1.0.15",
+    "meteor-promise": "^0.8.0"
+  },
+  "peerDependencies": {
+    "graphql": "^0.8.0 || ^0.9.0"
+  },
+  "optionalDependencies": {
+    "@types/graphql": "^0.8.5"
   },
   "typings": "dist/index.d.ts",
   "typescript": {
